Fix broken table spacing

--- a/public/css/tables.css
+++ b/public/css/tables.css
@@ -1,3 +1,9 @@
+.content table {
+  border-collapse: collapse;
+  margin-left: 2em;
+  text-align: left;
+}
+
 .content table caption {
   font-variant: small-caps;
   font-weight: bold;
@@ -6,15 +12,16 @@
   font-size: larger;
 }
 
-
-.content table td {
-  padding-right: 1em;
+.content table tr {
+  border-bottom: 1px solid white;
 }
 
-.content table {
-  border-collapse: collapse;
-  text-align: left;
+.content table td,
+.content table th {
+  padding: 0.7em 0.7em 0.7em 0;
+  vertical-align: top;
 }
+
 
 .content table td.number,
 .content table th.number {
